Upgrade junit and mockito versions